fix: Request - disable input autofocus on mobile

--- a/client/src/pages/scss/request.scss
+++ b/client/src/pages/scss/request.scss
@@ -25,7 +25,7 @@
     h3 {
       font-size: 20px;
       margin: 10px 0 0;
-      font-weight: 400;
+      font-weight: 300;
 
       &:first-of-type {
         margin: 25px 0 0;
